--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
 ###Cadena de conexion a Base de Datos
-spring.datasource.url=jdbc:mysql://localhost:3306/DB_TRAM_DOCU?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=adminMySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/DB_TRAM_DOCU?serverTimezone=America/Lima
+spring.datasource.username=usr_db_tram_docu
+spring.datasource.password=acce55sistradoc
 
+#spring.jpa.show-sql=true
 spring.jpa.show-sql=true
 
-server.port=8090
-
+#Configuración del servicio
 server.servlet.context-path=/ms-app-ws-sistradoc
+server.port=8090
