update tabs by space and mejora in solicitant register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=acce55sistradoc
 #spring.jpa.show-sql=true
 spring.jpa.show-sql=true
 
-#Configuración del servicio
+#Configuracion del servicio
 server.servlet.context-path=/ms-app-ws-sistradoc
 server.port=8090
