ajuste query by MariaDB

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,14 @@
 
 ###Cadena de conexion a Base de Datos
-spring.datasource.url=jdbc:mysql://localhost:3306/DB_TRAM_DOCU?serverTimezone=America/Lima
-spring.datasource.username=usr_db_tram_docu
-spring.datasource.password=acce55sistradoc
+#spring.datasource.url=jdbc:mysql://localhost:3306/DB_TRAM_DOCU?serverTimezone=America/Lima
+#spring.datasource.username=usr_db_tram_docu
+#spring.datasource.password=acce55sistradoc
+
+spring.datasource.url=jdbc:mariadb://192.168.18.89:3306/db_tram_docu?serverTimezone=America/Lima
+spring.datasource.username=adminMDB
+spring.datasource.password=adminMariaBD
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
 
 #spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
