upgrade to performance database and view status service with actuator/health

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@
 #spring.datasource.username=usr_db_tram_docu
 #spring.datasource.password=acce55sistradoc
 
-spring.datasource.url=jdbc:mariadb://192.168.18.89:3306/db_tram_docu?serverTimezone=America/Lima
+spring.datasource.url=jdbc:mariadb://192.168.18.81:3306/db_tram_docu?serverTimezone=America/Lima
 spring.datasource.username=adminMDB
 spring.datasource.password=adminMariaBD
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-
-#spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
 spring.jpa.show-sql=true
 
 #Configuracion del servicio
