--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,13 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=60000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
-spring.jpa.show-sql=true
+Spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.datasource.hikari.leak-detection-threshold=30000
 
 #Configuracion del servicio
 server.servlet.context-path=/ms-app-ws-sistradoc
 server.port=8090
+
+spring.main.web-application-type=servlet
+java.awt.headless=true
