implementación de proceso de listar tramites a exportar V1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 spring.datasource.url=jdbc:mariadb://192.168.18.81:3306/db_tram_docu?serverTimezone=America/Lima
 spring.datasource.username=adminMDB
-
+spring.datasource.password=adminMariaBD
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
@@ -15,7 +15,8 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 Spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
-spring.datasource.hikari.leak-detection-threshold=30000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.leakDetectionThreshold=180000
 
 #Configuracion del servicio
 server.servlet.context-path=/ms-app-ws-sistradoc
